fixed images alignment and size

--- a/playgo-mobile/src/app/pages/challenges/challenge-card/challenge-users-status/challenge-users-status.component.scss
+++ b/playgo-mobile/src/app/pages/challenges/challenge-card/challenge-users-status/challenge-users-status.component.scss
@@ -1,9 +1,11 @@
 ion-avatar {
-  width: 100%;
+  width: 10vw;
+  height: 10vw;
+  margin: auto;
   img {
     object-fit: contain;
   }
-  padding-right: 4px;
+  padding: 4px;
 }
 .arrow-up {
   width: 0;
